# ShirayukiBot

./: .replit  Dockerfile  cookies.txt  keep_alive.py  main.py  main_simplificado.py  pyproject.toml  replit.nix  requirements  requirements.txt  start.sh
cogs/: Comandos.py  Economia.py  Informacoes.py  Interacoes.py  Jogos.py  Musica.py  Utilitarios.py
utils/: emojis.py
