[tool.poetry]
name = "jsbot"
version = "0.1.0"
description = "Bot Discord com Nextcord e Wavelink"
authors = ["iamkevyn <seu@email.com>"]
readme = "README.md" 
[tool.poetry.dependencies]
python = "^3.10" # 
nextcord = "==2.6.0"
wavelink = "==3.0.0"
PyNaCl = "==1.5.0"
python-dotenv = "==1.0.1"
flask = "==3.0.0" 
setuptools = ">=65.5.0"
psutil = "==5.9.8"
aiohttp = "==3.8.5" 
yarl = "==1.9.2"
multidict = "==6.0.4" 
frozenlist = "==1.3.3" 
spotipy = "==2.23.0"
yt-dlp = "==2023.11.14" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
