[tool.poetry]
name = "jsbot"
version = "0.1.0"
description = "Bot Discord com Nextcord e Wavelink"
authors = ["iamkevyn <seu@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nextcord = {extras = ["voice"], version = ">=3.1.0"} # Atualizado para Nextcord 3.x
wavelink = {version = ">=3.1.0", extras = ["spotify"]}
PyNaCl = "^1.5.0"
python-dotenv = "^1.0.1"
flask = "^3.0.0" # Mantido, verificar compatibilidade se houver problemas
setuptools = ">=65.5.0"
psutil = "^5.9.8"
aiohttp = "^3.9.0" # Atualizado para versão compatível com Python 3.12
yarl = "^1.9.0" # Atualizado
multidict = "^6.0.0" # Atualizado
frozenlist = "^1.4.0" # Atualizado
spotipy = "^2.23.0"
yt-dlp = "^2023.12.30" # Versão um pouco mais recente, pode ajudar
qrcode = {extras = ["pil"], version = "*"} # Adicionado qrcode que estava no requirements.txt
pytz = "*" # Adicionado pytz
wikipedia-api = "*" # Adicionado wikipedia-api
googletrans = "==4.0.0rc1" # Mantido, já era rc
pyfiglet = "*" # Adicionado pyfiglet
mafic = "^2.10.1" # Mantido, verificar se precisa de ajuste para wavelink 3.x

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
