[tool.poetry]
name = "jsbot"
version = "0.1.0"
description = "Bot Discord com Nextcord e Wavelink"
authors = ["iamkevyn <seu@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nextcord = {extras = ["voice"], version = ">=3.1.0"} # Atualizado para Nextcord 3.x
wavelink = {version = ">=3.1.0", extras = ["spotify"]}
PyNaCl = ">=1.3.0, <1.5.0" # Ajustado para compatibilidade com Nextcord 3.x
python-dotenv = "^1.0.1"
flask = "^3.0.0" 
setuptools = ">=65.5.0"
psutil = "^5.9.8"
aiohttp = "^3.9.0" 
yarl = "^1.9.0" 
multidict = "^6.0.0" 
frozenlist = "^1.4.0" 
spotipy = "^2.23.0"
yt-dlp = "^2023.12.30" 
qrcode = {extras = ["pil"], version = "*"}
pytz = "*"
wikipedia-api = "*"
googletrans = "==4.0.0rc1"
pyfiglet = "*"
mafic = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
